# radio-training

data-receiver/: Cargo.toml
data-receiver/.cargo/: config.toml
data-receiver/src/: adc.rs  main.rs
data-transmitter/: Cargo.toml
data-transmitter/.cargo/: config.toml
data-transmitter/src/: bad_apple.rs  main.rs
shared/src/: lib.rs
