[package]
name = "data-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "nightly", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.0", features = ["defmt-timestamp-uptime", "tick-hz-90_000_000"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f446ze", "unstable-pac", "exti", "rt", "memory-x", "time", "time-driver-any"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-futures = "0.1.0"
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "1.0"
ssd1306 = "0.8.4"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
static_cell = { version = "2.0.0", features = ["nightly"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
tinybmp = "0.5.0"

shared = { path = "../shared" }

[profile.release]
debug = true
lto = true
